Updated week1 note1.

--- a/notes/week1/1.md
+++ b/notes/week1/1.md
@@ -2,12 +2,56 @@
 
 - A computer program that improves its performance at some task through experience.
 
-*Keywords*: Autonomy, adaptability, efficiency
+**Keywords:** Autonomy, adaptability, efficiency
 
 ## Subfields of ML
 
 1. Supervised Learning
+    - Decision Tree
 
 2. Unsupervised Learning
 
 3. Reinforcement Learning
+
+## Decision Tree
+
+How do we *supervise* the algorithm?  What does it mean to *supervise*?  Supervision here means we provide a set of examples and the algorithm will use this set to produce predictions.
+
+First, we need to describe the *features*/attributes of the data set, i.e. *data representation*.  In the case of CSV format, the *feature values* are represented in comma-separated values.
+
+**Note:** the concept of *noise* will be discussed more in the future.  In brief, noise could appear as inaccurate labeling of data, for example.
+
+## The Induction Framework
+
+1. Traning Data
+2. Learning Algorithm
+3. f
+4. Test Example
+
+```tex
+    1 -> 2 -> 3 <-> 4 -> 3
+    
+    f(x) -> y
+        where
+            x: examples
+            y: label
+```
+
+## Types of Inductive Learning
+
+1. Regression
+2. Binary classif.
+3. Multiclass classsif.
+4. Discovery
+5. Reinforcement learning
+
+*We focus on 1-4 for now.*
+
+```tex
+f(x) => $R^+$
+
+f(x) => {0, 1} {+, -}
+
+f(x) => { NYC, SF, Pullman, CA }
+```
+
