Updated week1 note1.

--- a/notes/week1/1.md
+++ b/notes/week1/1.md
@@ -48,10 +48,29 @@ First, we need to describe the *features*/attributes of the data set, i.e. *data
 *We focus on 1-4 for now.*
 
 ```tex
-f(x) => $R^+$
+    f(x) => $R^+$
 
-f(x) => {0, 1} {+, -}
+    f(x) => {0, 1} {+, -}
 
-f(x) => { NYC, SF, Pullman, CA }
+    f(x) => { NYC, SF, Pullman, CA }
+```
+## Prediction Accuracy
+
+```tex
+    Accuracy  = \frac {#correct}{#total}
 ```
 
+## Performance: Loss Function
+
+- `L(., .)`
+    ```tex
+    L(y, $y^$)
+        where
+            y  = true label
+            $y^$ = 
+    ```
+- Regression
+- Binary classif.
+- Multiclass classsif.
+- Discovery
+- Reinforcement learning
