--- a/notes/week3.geometric.learning/2.clustering.md
+++ b/notes/week3.geometric.learning/2.clustering.md
@@ -1,2 +1,31 @@
 ## Clustering and Python ML libs
 
+### K-Mean Clustering
+
+- *Unsupervised Learning*
+
+- Data is examples of $\{x_1 .. x_N\}$, i.e. we assume it is structured and the vectors have the same dimensionality
+
+#### Will k-means converge (stop changing)?
+
+Yes:
+	1. Cluster assignment
+	2. Mean computation
+
+Because both tasks use the same distance function. There is only finite numbers of assignments.
+
+#### K-means Hyperparameters
+
+- K
+	- Choose using *elbow method*
+
+We can also use Sum of squared error, SSE.
+
+```txt
+SSE = 0
+
+for c:cluster in clusters:
+	mean = clusterMean(c)
+	for d:datapoint in c:
+		SSE += (d - mean) ** 2
+```
