Reorganized this dir.

--- a/notes/week2.decision.tree/2.decision.tree.md
+++ b/notes/week2.decision.tree/2.decision.tree.md
@@ -8,6 +8,6 @@ A greedy top-down decision is less computationally expensive.
 
 Decision tree is inspired information theory.  Thus, entropy applies and is a measure of the degree of noise/impurity of the data set.
 
-$Entropy(S) = -p_{+}log_2p_{+} - p_{-}log_2p_{-}$
+$$Entropy(S) = -p_{+}log_2p_{+} - p_{-}log_2p_{-}$$
 
-$Gain(S, A) = Entropy(S) - \sum_{i} \frac{|S_v|}{S} Entropy(S_v)$
+$$Gain(S, A) = Entropy(S) - \sum_{i} \frac{|S_v|}{S} Entropy(S_v)$$
