--- a/notes/week2.decision.tree/1.intro.to.ML.md
+++ b/notes/week2.decision.tree/1.intro.to.ML.md
@@ -1,8 +1,18 @@
-## What is Machine Learning?
+---
+tags:
+- autonomy
+- adaptability
+- efficiency
+- supervise
+- unsupervise
+- inductive
+- learning
+---
+
+# What is Machine Learning?
 
 - A computer program that improves its performance at some task through experience.
 
-**Keywords:** Autonomy, adaptability, efficiency
 
 ## Subfields of ML
 
@@ -11,7 +21,7 @@
 
 2. Unsupervised Learning
 
-3. Reinforcement Learning
+3. Reinforced Learning
 
 ## Decision Tree
 
@@ -28,37 +38,32 @@ First, we need to describe the *features*/attributes of the data set, i.e. *data
 3. f
 4. Test Example
 
-```tex
-    1 -> 2 -> 3 <-> 4 -> 3
+```txt
+1 -> 2 -> 3 <-> 4 -> 3
     
-    f(x) -> y
-        where
-            x: examples
-            y: label
+f(x) -> y
+    where
+        x: examples
+	    y: label
 ```
 
 ## Types of Inductive Learning
 
 1. Regression
-2. Binary classif.
-3. Multiclass classsif.
+2. Binary classification
+3. Multiclass classification
 4. Discovery
-5. Reinforcement learning
+5. Reinforced learning
 
 *We focus on 1-4 for now.*
 
-```tex
-    f(x) => $R^+$
+$f(x) \to R^+$
+$f(x) \to {0, 1} {+, -}$
+$f(x) \to { NYC, SF, Pullman, CA }$
 
-    f(x) => {0, 1} {+, -}
-
-    f(x) => { NYC, SF, Pullman, CA }
-```
 ## Prediction Accuracy
 
-```tex
-    Accuracy  = \frac {#correct}{#total}
-```
+$$Accuracy  = \frac {\#correct}{\#total}$$
 
 ## Performance: Loss Function
 
@@ -69,6 +74,7 @@ First, we need to describe the *features*/attributes of the data set, i.e. *data
             y  = true label
             $y^$ = 
     ```
+
 - Regression
 - Binary classif.
 - Multiclass classsif.
