--- a/notes/week3.geometric.learning/1.geometric.learning.nearest.neighbors.md
+++ b/notes/week3.geometric.learning/1.geometric.learning.nearest.neighbors.md
@@ -1,3 +1,10 @@
+---
+tags:
+- Geometric
+- Dimensionality
+- NearestNeigbors
+- KNN
+---
 ## Geometric Learning & Nearest Neighbors
 
 ### Geometry & Dimensionality
@@ -16,7 +23,7 @@ Given a set of email data, we see if we can identify spam emails from regular em
 
 In a KNN algorithm, we give data points that are to one another the same label. In other words, instances should be similar to the points nearby.
 
-$d(a,b) = [\sum_{d=1}^{D} (a_d - b_d)^2]^{1/2}$
+$$d(a,b) = \left[ \sum_{d=1}^{D} (a_d - b_d)^2 \right] ^{1/2}$$
 
 ### When can a distance function cause the classifer to fail?
 
