--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -1,38 +1,23 @@
----
-tags:
-- autonomy
-- adaptability
-- efficiency
-- supervise
-- unsupervise
-- inductive
-- learning
----
+#autonomy #adaptability #efficiency #supervise #unsupervise #inductive-learning 
 
-# What is Machine Learning?
+[[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#5. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#6. Performance: Loss Function|loss function]] 
 
+## 1. What is Machine Learning?
 - A computer program that improves its performance at some task through experience.
 
-
-## Subfields of ML
-
+## 2. Subfields of ML
 1. Supervised Learning
     - Decision Tree
-
 2. Unsupervised Learning
-
 3. Reinforced Learning
 
-## Decision Tree
-
-How do we *supervise* the algorithm?  What does it mean to *supervise*?  Supervision here means we provide a set of examples and the algorithm will use this set to produce predictions.
+How do we *supervise* the algorithm?  What does it mean to *supervise*?  Supervision here means that *we provide a set of examples, and then the algorithm will use this set to produce* **predictions**.
 
 First, we need to describe the *features*/attributes of the data set, i.e. *data representation*.  In the case of CSV format, the *feature values* are represented in comma-separated values.
 
 **Note:** the concept of *noise* will be discussed more in the future.  In brief, noise could appear as inaccurate labeling of data, for example.
 
-## The Induction Framework
-
+## 3. The Induction Framework
 1. Traning Data
 2. Learning Algorithm
 3. f
@@ -47,8 +32,7 @@ f(x) -> y
 	    y: label
 ```
 
-## Types of Inductive Learning
-
+#### Types of Inductive Learning
 1. Regression
 2. Binary classification
 3. Multiclass classification
@@ -57,16 +41,15 @@ f(x) -> y
 
 *We focus on 1-4 for now.*
 
+#### Example
 $f(x) \to R^+$
 $f(x) \to {0, 1} {+, -}$
 $f(x) \to { NYC, SF, Pullman, CA }$
 
-## Prediction Accuracy
-
+## 5. Prediction Accuracy
 $$Accuracy  = \frac {\#correct}{\#total}$$
 
-## Performance: Loss Function
-
+## 6. Performance: Loss Function
 - `L(., .)`
     ```tex
     L(y, $y^$)
