--- a/notes/01. Decision Trees.md
+++ b/notes/01. Decision Trees.md
@@ -1,13 +1,7 @@
----
-tags:
-- Geometric
-- Dimensionality
-- NearestNeigbors
-- KNN
-- PracticalConsiderations
----
+#decision-tree #practical-considerations
 
 ## 1.  Characteristics
+---
 - Discrete class values
 - Disjunctive hypothesis
 - Can handle noisy training data
@@ -53,12 +47,14 @@ Given a decision tree, each path from root to leaf is a conjunction of all the a
 A greedy top-down decision is less computationally expensive.
 
 ## 2. Entropy
+---
 Decision tree is inspired by information theory.  Thus, entropy applies and is a measure of the degree of noise/impurity of the data set.
 
 $$Entropy(S) = p_{+}log_2p_{+} - p_{-}log_2p_{-}$$
 $$Gain(S, A) = Entropy(S) - \sum_{i} \frac{|S_v|}{S} Entropy(S_v)$$
 
-### 3. Practical Considerations
+## 3. Practical Considerations
+---
 - How to use tree
 - Continuous feature values
 - **Depth limit/pruning**
