--- a/notes/02. Geometric Learning and KNN.md
+++ b/notes/02. Geometric Learning and KNN.md
@@ -1,13 +1,7 @@
----
-tags:
-- Geometric
-- Dimensionality
-- NearestNeigbors
-- KNN
----
+#geometric #dimensionality #nearest-neigbors #KNN
 
-## Geometry & Dimensionality
-
+## 1. Geometry & Dimensionality
+---
 Given a set of email data, we see if we can identify spam emails from regular emails. We aim to build feature vectors and let the algorithm to "learn". There are a few suggestions we can start from:
 - subject length
 - domain name of email
@@ -16,16 +10,18 @@ Given a set of email data, we see if we can identify spam emails from regular em
 - capitalization
 - words (targeted words)
 - formatting
-- No specific person being addressed
+- no specific person being addressed
 
-## K-Nearest Neighbors (KNN) Classifier
+Thus, a good way to break down the problem is to use features as *dimensions*.
 
+## 2. K-Nearest Neighbors (KNN) Classifier
+---
 In a KNN algorithm, we give data points that are to one another the same label. In other words, instances should be similar to the points nearby.
 
 $$d(a,b) = \left( \sum_{d=1}^{D} (a_d - b_d)^2 \right) ^{\frac{1}{2}}$$
 
-## When can a distance function cause the classifer to fail?
-
+## 3. When can a distance function cause the classifer to fail?
+---
 1. Irrelevant features
 2. Redudant features
 3. Range of features
@@ -41,15 +37,15 @@ def normalize(X):
 	
 ```
 
-## KNN Pros & Cons
-
-### Pros:
+## 4. KNN Pros & Cons
+---
+#### Pros:
 - simple
 - no training
 - good accuracy
 - time series
 - classfication or regression
 
-### Cons:
+#### Cons:
 - expensive; does NOT scale well
 - sensitive to features & distance
