--- a/notes/03. Clustering and Python ML Libs.md
+++ b/notes/03. Clustering and Python ML Libs.md
@@ -1,11 +1,11 @@
-### K-Mean Clustering
+#clustering #k-mean
 
+## 1. K-Mean Clustering
+---
 - *Unsupervised Learning*
-
 - Data is examples of $\{x_1 .. x_N\}$, i.e. we assume it is structured and the vectors have the same dimensionality
 
 #### Will k-means converge (stop changing)?
-
 Yes:
 	1. Cluster assignment
 	2. Mean computation
@@ -13,7 +13,6 @@ Yes:
 Because both tasks use the same distance function. There is only finite numbers of assignments.
 
 #### K-means Hyperparameters
-
 - K
 	- Choose using *elbow method*
 
