--- a/notes/04. Perceptron Decision Bounds.md
+++ b/notes/04. Perceptron Decision Bounds.md
@@ -1,3 +1,3 @@
-Links: [[ML Overview]], [[Decision Trees]], [[Geometric Learning and KNN]], [[Clustering and Python ML Libraries]]
+Links: [[00. ML Overview]], [[01. Decision Trees]], [[02. Geometric Learning and KNN]], [[03. Clustering and Python ML Libs]]
 
 **NOTE:** *Review the lecture video to make notes.*
