--- a/notes/01. Decision Trees.md
+++ b/notes/01. Decision Trees.md
@@ -51,7 +51,7 @@ A greedy top-down decision is less computationally expensive.
 Decision tree is inspired by information theory.  Thus, entropy applies and is a measure of the degree of noise/impurity of the data set.
 
 $$Entropy(S) = p_{+}log_2p_{+} - p_{-}log_2p_{-}$$
-$$Gain(S, A) = Entropy(S) - \sum_{i} \frac{|S_v|}{S} Entropy(S_v)$$
+$$Gain(S, A) = Entropy(S) - \sum_{\nu \in Values(A)} \frac{|S_\nu|}{S} Entropy(S_\nu)$$
 
 ## 3. Practical Considerations
 ---
