--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -6,6 +6,7 @@
 ---
 - A computer program that improves its performance at some task through experience.
 
+
 ## 2. Subfields of ML
 ---
 1. Supervised Learning
@@ -50,6 +51,7 @@ First, we need to describe the *features*/attributes of the data set, i.e. *data
 
 **Note:** the concept of *noise* will be discussed more in the future.  In brief, noise could appear as inaccurate labeling of data, for example.
 
+
 ## 3. The Induction Framework
 ---
 
@@ -80,12 +82,14 @@ $f(x) \to y$
 $f(x) \to R^+$
 $f(x) \to {0, 1} {+, -}$
 $f(x) \to { NYC, SF, Pullman, CA }$
-	
-## 5. Prediction Accuracy
+
+
+## 4. Prediction Accuracy
 ---
 $$Accuracy  = \frac {\mbox{amount of correct}}{\mbox{amount of total}}$$
 
-## 6. Performance: Loss Function
+
+## 5. Performance: Loss Function
 ---
 
 $L(y, \hat{y})$
@@ -100,7 +104,8 @@ Used in:
 - Discovery
 - Reinforcement learning
 
-### 7. Other key ideas
+
+## 6. Other key ideas
 ---
 - variance and bias
 - Sigmoid function
