cleaned up this vault.

--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -1,55 +1,63 @@
-#autonomy #adaptability #efficiency #supervise #unsupervise #inductive-learning 
+#autonomy #adaptability #efficiency #supervise #unsupervise #reinforcement-learning #inductive-learning 
 
-[[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#5. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#6. Performance: Loss Function|loss function]] 
+[[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#4. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#5. Performance: Loss Function|loss function]] 
+
 
 ## 1. What is Machine Learning?
 ---
-- A computer program that improves its performance at some task through experience.
+Machine learning is a process in which a computer program/algorithm improves its performance at some task through experience.
 
 
 ## 2. Subfields of ML
 ---
-1. Supervised Learning
-	- Tree:
-		- Decision Tree
-		- Random forest
-		- Regression Tree, Decision Stump, ...
-	- Instance:
-		- KNN
-	- Kernel:
-		- SVM
-	- Network:
-		- Perceptron
-		- Linear Regression
-		- Multi-layer
-	- Probabilistic Model:
-		- Naive Bayes
-		- Logistic Regression
-		- Bayes Net, Deep Belief Net, Bayesian Optimal, ...
+There are *supervised*, *unsupervised* and *reinforcement* learning. For now we focus on supervised learning algorithms.
 
-2. Unsupervised Learning
-	- Clustering:
-		- K-Means
-		- DBScan
-		- Hierarchical, Gaussian Mixture Models, ...
-	- Dimensionality Reduction:
-		- PCA
-		- SVD, LDA, ...
-	- Anomaly Detection
-	- Association Rule
-
-3. Reinforcement Learning
-	- Temporal Difference
-	- Q Learning
-	- MDP
-	- SARSA
-	- Deep Reinforcement Learning
-
-How do we *supervise* the algorithm?  What does it mean to *supervise*?  Supervision here means that *we provide a set of examples, and then the algorithm will use this set to produce* **predictions**.
+How do we *supervise* an algorithm?  What does it mean to *supervise*?  Supervision here means that *we provide a set of examples*, and then the *algorithm will use this set to produce* **predictions**.
 
 First, we need to describe the *features*/attributes of the data set, i.e. *data representation*.  In the case of CSV format, the *feature values* are represented in comma-separated values.
 
-**Note:** the concept of *noise* will be discussed more in the future.  In brief, noise could appear as inaccurate labeling of data, for example.
+```ad-note
+The concept of *noise* will be discussed more in the future.  In brief, noise could appear as inaccurate labeling of data, for example.
+
+```
+
+The following sections list common approaches.
+
+#### Supervised Learning
+- Tree:
+	- Decision Tree
+	- Random forest
+	- Regression Tree, Decision Stump, ...
+- Instance:
+	- KNN
+- Kernel:
+	- SVM
+- Network:
+	- Perceptron
+	- Linear Regression
+	- Multi-layer
+- Probabilistic Model:
+	- Naive Bayes
+	- Logistic Regression
+	- Bayes Net, Deep Belief Net, Bayesian Optimal, ...
+
+#### Unsupervised Learning
+- Clustering:
+	- K-Means
+	- DBScan
+	- Hierarchical, Gaussian Mixture Models, ...
+- Dimensionality Reduction:
+	- PCA
+	- SVD, LDA, ...
+- Anomaly Detection
+- Association Rule
+
+#### Reinforcement Learning
+- Temporal Difference
+- Q Learning
+- MDP
+- SARSA
+- Deep Reinforcement Learning
 
 
 ## 3. The Induction Framework
@@ -86,7 +94,7 @@ $f(x) \to { NYC, SF, Pullman, CA }$
 
 ## 4. Prediction Accuracy
 ---
-$$Accuracy  = \frac {\mbox{amount of correct}}{\mbox{amount of total}}$$
+$$Accuracy  = \frac {\mbox{number of correct}}{\mbox{total}}$$
 
 
 ## 5. Performance: Loss Function
@@ -108,6 +116,6 @@ Used in:
 ## 6. Other key ideas
 ---
 - variance and bias
-- Sigmoid function
+- sigmoid function
 - probabilistic modeling
-- Naive Bayes
+- naïve Bayes
