--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -1,6 +1,6 @@
 #autonomy #adaptability #efficiency #supervise #unsupervise #reinforcement-learning #inductive-learning 
 
-[[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#4. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#5. Performance: Loss Function|loss function]] 
+[[00. ML Overview#^3e5928|common learning algorithms]], [[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#4. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#5. Performance: Loss Function|loss function]], [[01. Decision Trees|decision trees]], [[02. Geometric Learning and KNN|geometric/KNN]], [[03. Clustering and Python ML Libs|clustering]], [[04. Perceptron Decision Bounds|perceptron]]
 
 
 ## 1. What is Machine Learning?
@@ -21,19 +21,19 @@ The concept of *noise* will be discussed more in the future.  In brief, noise co
 
 ```
 
-The following sections list common approaches.
+The following sections list common approaches. ^3e5928
 
 #### Supervised Learning
 - Tree:
-	- Decision Tree
+	- [[01. Decision Trees|Decision Trees]]
 	- Random forest
 	- Regression Tree, Decision Stump, ...
 - Instance:
-	- KNN
+	- [[02. Geometric Learning and KNN|KNN]]
 - Kernel:
 	- SVM
 - Network:
-	- Perceptron
+	- [[04. Perceptron Decision Bounds|Perceptron]]
 	- Linear Regression
 	- Multi-layer
 - Probabilistic Model:
