Added important concepts to overviews (loss function, expected loss, inductive bias, etc.)

--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -23,7 +23,7 @@ The concept of *noise* will be discussed more in the future.  In brief, noise co
 
 The following sections list common approaches. ^3e5928
 
-#### Supervised Learning
+##### Supervised
 - Tree:
 	- [[01. Decision Trees|Decision Trees]]
 	- Random forest
@@ -41,7 +41,7 @@ The following sections list common approaches. ^3e5928
 	- Logistic Regression
 	- Bayes Net, Deep Belief Net, Bayesian Optimal, ...
 
-#### Unsupervised Learning
+##### Unsupervised
 - Clustering:
 	- K-Means
 	- DBScan
@@ -52,7 +52,7 @@ The following sections list common approaches. ^3e5928
 - Anomaly Detection
 - Association Rule
 
-#### Reinforcement Learning
+##### Reinforcement
 - Temporal Difference
 - Q Learning
 - MDP
@@ -62,6 +62,14 @@ The following sections list common approaches. ^3e5928
 
 ## 3. The Induction Framework
 ---
+
+```ad-info
+title: What is inductive learning?
+
+Given (i) a loss function $\ell$ and (ii) a sample $D$ from some unknown distribution $\mathcal{D}$, you must compute a function $f$ that has low expected error $\epsilon$ over $\mathcal{D}$ with respect to $f$.
+
+*First introduced in [[01. Decision Trees]]*.
+```
 
 ```mermaid
 graph LR
@@ -99,22 +107,42 @@ $$Accuracy  = \frac {\mbox{number of correct}}{\mbox{total}}$$
 
 ## 5. Performance: Loss Function
 ---
+##### a. Loss Function
+We use a loss function to measure the following qualities:
+- against unseen test data (whether algorithm is *generalizable*)
+- whether it is relevant to the problem being solved
+- strong algorithmic relationship between the training data and test data
 
-$L(y, \hat{y})$
-    where
-        $y$  = true label
-        $\hat{y}$ = 
+The loss function typically has two parameters $\ell(\cdot, \cdot)$. It tells us *how bad* is a system performing in predicting compared to the truth. For example, the following function $L$ is a measure of error:
 
-Used in:
-- Regression
-- Binary classif.
-- Multiclass classsif.
+$L(y, \hat{y})$ where
+	$y$  = true label
+	$\hat{y}$ = system prediction
+
+*The loss function must be decided for every learning goal*. The loss function is used in:
+- Regression:
+	- *squared loss:*
+		$$\ell(y, \hat{y})=(y-\hat{y})^2$$
+	- *absolute loss:*
+		$$\ell(y, \hat{y})=|y-\hat{y}|$$
+- Binary classification:
+	- *zero/one loss:*
+		$$
+		\ell(y, \hat{y})= \cases{ 0 & if $y=\hat{y}$ \cr
+								   1 & otherwise }
+		$$
+- Multiclass classsification: also *zero/one loss*
 - Discovery
 - Reinforcement learning
 
+##### b. Probabilistic Model
+Given a probability distribution $\mathcal{D}$, the training algorithm must try to induce a function $f$ that should minimize *expected loss* $\epsilon$ over examples drawn from $\mathcal{D}$.
 
-## 6. Other key ideas
+## 6. Inductive Bias
+
+## 99. Other Key Ideas
 ---
+- *training error*
 - variance and bias
 - sigmoid function
 - probabilistic modeling
