--- a/notes/01. Decision Trees.md
+++ b/notes/01. Decision Trees.md
@@ -2,6 +2,7 @@
 
 ## 1.  Characteristics
 ---
+- [[00. ML Overview#3. The Induction Framework|inductive learning]]
 - Discrete class values
 - Disjunctive hypothesis
 - Can handle noisy training data
