--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -1,7 +1,6 @@
-#autonomy #adaptability #efficiency #supervise #unsupervise #reinforcement-learning #inductive-learning 
+#autonomy #adaptability #efficiency #supervise #unsupervise #reinforcement #inductive-learning #loss-function #probabilistic-model #inductive-bias
 
-[[00. ML Overview#^3e5928|common learning algorithms]], [[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#4. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#5. Performance: Loss Function|loss function]], [[01. Decision Trees|decision trees]], [[02. Geometric Learning and KNN|geometric/KNN]], [[03. Clustering and Python ML Libs|clustering]], [[04. Perceptron Decision Bounds|perceptron]]
-
+[[00. ML Overview#^3e5928|common learning algorithms]], [[00. ML Overview#3. The Induction Framework#Types of Inductive Learning|types of inductive learning]], [[00. ML Overview#4. Prediction Accuracy|prediction accuracy]], [[00. ML Overview#5. Performance: Loss Function|loss function]], [[00. ML Overview#6. Inductive Bias|inductive bias]]
 
 ## 1. What is Machine Learning?
 ---
@@ -12,7 +11,10 @@ Machine learning is a process in which a computer program/algorithm improves its
 ---
 There are *supervised*, *unsupervised* and *reinforcement* learning. For now we focus on supervised learning algorithms.
 
-How do we *supervise* an algorithm?  What does it mean to *supervise*?  Supervision here means that *we provide a set of examples*, and then the *algorithm will use this set to produce* **predictions**.
+The following sections list common approaches. ^3e5928
+
+##### Supervised
+How do we #supervise an algorithm?  What does it mean to supervise?  Supervision here means that *we provide a set of examples*, and then the *algorithm will use this set to produce* **predictions**.
 
 First, we need to describe the *features*/attributes of the data set, i.e. *data representation*.  In the case of CSV format, the *feature values* are represented in comma-separated values.
 
@@ -21,9 +23,6 @@ The concept of *noise* will be discussed more in the future.  In brief, noise co
 
 ```
 
-The following sections list common approaches. ^3e5928
-
-##### Supervised
 - Tree:
 	- [[01. Decision Trees|Decision Trees]]
 	- Random forest
