Added inductive bias to overview.

--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -61,7 +61,6 @@ The concept of *noise* will be discussed more in the future.  In brief, noise co
 
 ## 3. The Induction Framework
 ---
-
 ```ad-info
 title: What is inductive learning?
 
@@ -71,32 +70,44 @@ Given (i) a loss function $\ell$ and (ii) a sample $D$ from some unknown distrib
 ```
 
 ```mermaid
-graph LR
+graph TD
 	1[train data] --> 2[learning algo.] --> 3[f]
 	3 --predicted label--> 4[test example] --> 3
-    
+	3 -.- 5["<strong>NOTE:</strong><br><em>f(x) -> y</em>, where<br><em>x: examples</em><br><em>y: label</em>"]
 ```
 
-$f(x) \to y$
-    where
-	    $x$: examples
-	    $y$: label
-
-#### Types of Inductive Learning
-1. Regression: falls back toward the *mean*
-2. Binary classification: predicts a simple binary outcome
-3. Multiclass classification: beyond binary outcomes to higher dimensional outcomes
+Types of Inductive Learning:
+1. **Regression**: falls back toward the *mean* value
+2. **Binary classification**: predicts a simple binary outcome
+3. **Multiclass classification**: goes beyond binary to higher dimensional outcomes
 4. Discovery
 5. Reinforced learning
 
-```ad-note
- *We focus on 1-4 for now.*
+*We focus on 1-4 for now.*
+
+Example:
+	$f(x) \to R^+$
+	$f(x) \to {0, 1} {+, -}$
+	$f(x) \to { NYC, SF, Pullman, CA }$
+	
+
+### Inductive Bias
+```ad-help
+**Bayes error rate** (or **Bayes optimal error rate**) is the best error rate that we can hope for in this classfication problem (zero/one loss).
 ```
 
-#### Example
-$f(x) \to R^+$
-$f(x) \to {0, 1} {+, -}$
-$f(x) \to { NYC, SF, Pullman, CA }$
+*Inductive bias* is the preference for one distinctive dimension during a classifying problem over another. For example, given a group of bird images and another group of non-flying mammal images, there are two ways one can classify the two groups: either "bird vs. non-bird" or "fly vs. no-fly".
+
+Thus, the error generated from *inductive bias* is due to the limitation of the algorithm. Its own constraints prevent a particular algorithm to cope with the data that it is handling.
+
+ML models differ from one another by their own *inductive bias*.
+
+```ad-important
+Remember that *not everything is learnable*.
+```
+
+
+### Underfitting and Overfitting
 
 
 ## 4. Prediction Accuracy
@@ -107,10 +118,10 @@ $$Accuracy  = \frac {\mbox{number of correct}}{\mbox{total}}$$
 ## 5. Performance: Loss Function
 ---
 ##### a. Loss Function
-We use a loss function to measure the following qualities:
+We use a loss function to measure the performance of the learning algorithm:
 - against unseen test data (whether algorithm is *generalizable*)
 - whether it is relevant to the problem being solved
-- strong algorithmic relationship between the training data and test data
+- that it is sees a strong algorithmic relationship between the training data and test data
 
 The loss function typically has two parameters $\ell(\cdot, \cdot)$. It tells us *how bad* is a system performing in predicting compared to the truth. For example, the following function $L$ is a measure of error:
 
@@ -118,7 +129,7 @@ $L(y, \hat{y})$ where
 	$y$  = true label
 	$\hat{y}$ = system prediction
 
-*The loss function must be decided for every learning goal*. The loss function is used in:
+*A loss function must be decided for every learning goal*. The loss function is used in:
 - Regression:
 	- *squared loss:*
 		$$\ell(y, \hat{y})=(y-\hat{y})^2$$
@@ -136,8 +147,6 @@ $L(y, \hat{y})$ where
 
 ##### b. Probabilistic Model
 Given a probability distribution $\mathcal{D}$, the training algorithm must try to induce a function $f$ that should minimize *expected loss* $\epsilon$ over examples drawn from $\mathcal{D}$.
-
-## 6. Inductive Bias
 
 ## 99. Other Key Ideas
 ---
