--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -76,6 +76,7 @@ graph TD
 	3 -.- 5["<strong>NOTE:</strong><br><em>f(x) -> y</em>, where<br><em>x: examples</em><br><em>y: label</em>"]
 ```
 
+
 Types of Inductive Learning:
 1. **Regression**: falls back toward the *mean* value
 2. **Binary classification**: predicts a simple binary outcome
@@ -92,19 +93,11 @@ Example:
 	
 
 ### Inductive Bias
-```ad-help
-**Bayes error rate** (or **Bayes optimal error rate**) is the best error rate that we can hope for in this classfication problem (zero/one loss).
-```
-
 *Inductive bias* is the preference for one distinctive dimension during a classifying problem over another. For example, given a group of bird images and another group of non-flying mammal images, there are two ways one can classify the two groups: either "bird vs. non-bird" or "fly vs. no-fly".
 
 Thus, the error generated from *inductive bias* is due to the limitation of the algorithm. Its own constraints prevent a particular algorithm to cope with the data that it is handling.
 
-ML models differ from one another by their own *inductive bias*.
-
-```ad-important
-Remember that *not everything is learnable*.
-```
+ML models differ from one another by their own *inductive bias*. Also, remember that **not everything is learnable**.
 
 
 ### Underfitting and Overfitting
@@ -145,8 +138,10 @@ $L(y, \hat{y})$ where
 - Discovery
 - Reinforcement learning
 
+
 ##### b. Probabilistic Model
 Given a probability distribution $\mathcal{D}$, the training algorithm must try to induce a function $f$ that should minimize *expected loss* $\epsilon$ over examples drawn from $\mathcal{D}$.
+
 
 ## 99. Other Key Ideas
 ---
