Finished parsing out key fundamentals from chapter 2. Ready to work on geometric and KNN chapter.

--- a/notes/00. ML Overview.md
+++ b/notes/00. ML Overview.md
@@ -61,10 +61,8 @@ The concept of *noise* will be discussed more in the future.  In brief, noise co
 
 ## 3. The Induction Framework
 ---
-```ad-info
-title: What is inductive learning?
-
-Given (i) a loss function $\ell$ and (ii) a sample $D$ from some unknown distribution $\mathcal{D}$, you must compute a function $f$ that has low expected error $\epsilon$ over $\mathcal{D}$ with respect to $f$.
+> [!info] What is inductive learning?
+> Given (i) a loss function $\ell$ and (ii) a sample $D$ from some unknown distribution $\mathcal{D}$, you must compute a function $f$ that has low expected error $\epsilon$ over $\mathcal{D}$ with respect to $f$.
 
 *First introduced in [[01. Decision Trees]]*.
 ```
@@ -100,27 +98,20 @@ Thus, the error generated from *inductive bias* is due to the limitation of the 
 ML models differ from one another by their own *inductive bias*. Also, remember that **not everything is learnable**.
 
 
-### Underfitting and Overfitting
-
-
-## 4. Prediction Accuracy
+## 4. Performance
 ---
+### i. Prediction Accuracy
 $$Accuracy  = \frac {\mbox{number of correct}}{\mbox{total}}$$
 
 
-## 5. Performance: Loss Function
----
+### ii. Loss Function
 ##### a. Loss Function
 We use a loss function to measure the performance of the learning algorithm:
 - against unseen test data (whether algorithm is *generalizable*)
 - whether it is relevant to the problem being solved
 - that it is sees a strong algorithmic relationship between the training data and test data
 
-The loss function typically has two parameters $\ell(\cdot, \cdot)$. It tells us *how bad* is a system performing in predicting compared to the truth. For example, the following function $L$ is a measure of error:
-
-$L(y, \hat{y})$ where
-	$y$  = true label
-	$\hat{y}$ = system prediction
+The loss function typically has two parameters $\ell(\cdot, \cdot)$. It tells us *how bad* is a system performing in predicting compared to the truth. For example, the following function $L$ is a measure of error: $L(y, \hat{y})$, where $y$  = true label and $\hat{y}$ = system prediction.
 
 *A loss function must be decided for every learning goal*. The loss function is used in:
 - Regression:
@@ -141,6 +132,17 @@ $L(y, \hat{y})$ where
 
 ##### b. Probabilistic Model
 Given a probability distribution $\mathcal{D}$, the training algorithm must try to induce a function $f$ that should minimize *expected loss* $\epsilon$ over examples drawn from $\mathcal{D}$.
+
+
+### iii. Overfitting and Underfitting
+
+> [!important] 
+> The goal of any learning algorithm is not try to get 0% error. The goal is that it will do well on *future*, *unseen* data.
+
+*Underfitting* is when you had the opportunity to learn something but didn't. In contrast, *overfitting* is when you pay too much attention to the idiosyncracies of the training data, and aren't able to generalize well. Another good analogy is a lazy student who doesn't learn much given the opportunities and a nerd who spends too much time on useless information. Both missed the point of learning.
+
+### iv. Hyperparameters
+These are parameters that control other parameters in the model. In other words, changing the hyperparameters can influence the shape of the outcome in large scale.
 
 
 ## 99. Other Key Ideas
