Added outlines for chapter 3 4 5 (knn, perceptron and practical considerations).

--- a/notes/02. Geometric Learning and KNN.md
+++ b/notes/02. Geometric Learning and KNN.md
@@ -1,4 +1,4 @@
-#geometric #dimensionality #nearest-neigbors #KNN
+#geometric #dimensionality #nearest-neigbors #KNN #decision-bounds 
 
 ## 1. Geometry & Dimensionality
 ---
