--- a/notes/00. Scratch.md
+++ b/notes/00. Scratch.md
@@ -7,7 +7,7 @@ This class of problems involves boundary establishment, or classifying data poin
 - K-Mean Clustering
 - Curse of High Dimensionality
 
-### 4. Perceptron*
+### 4. Perceptron
 1. Perceptron follows the *error-driven updating* model.
 
 2. There is still the need for *geometric interpretation*, i.e. the same problem encountered by the KNN and clustering methods.
@@ -19,5 +19,37 @@ This class of problems involves boundary establishment, or classifying data poin
 5. Limits and Practical Considerations
 
 ### 5. Practical Considerations
-
 1. *Feature pruning* and *normalization*
+2. Combinatorial Explosion
+3. Evaluating model performance and cross validation
+4. Hypothesis testing and statistic signficance
+5. bias/variance trade-off
+
+### 6. Multiclass classification
+1. Multiclass classfication
+2. Ranking
+
+### 7. Linear Models
+1. Optimization framework
+2. Convex surrogate loss function
+3. Weight regularization
+4. Gradient Descent
+5. Gradients to Subgradients
+
+### 8. Bias and Fairness
+1. Unsupervised adaptation
+2. Supervised adaptation
+
+### 9. Probabilistic Modeling
+1. Classification by *density estimation*
+2. Statistic estimation
+3. Naive Bayes models
+4. Prediction
+5. Generative stories
+6. Conditional models
+
+### 10. Neural Networks
+1. *Back-propagation*
+2. *Initialization* and *convergence* of neural nets
+3. 2+ layers
+4. Breadth vs Depth
